<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/saved_connection_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:src="@drawable/ic_more_vert_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/from"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/saved_connection_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingRight="20dp"
                        android:singleLine="true"/>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nach"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/saved_connection_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingRight="20dp"
                        android:singleLine="true" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/departure_short_colon"
                            android:textStyle="bold" />

                        <Space
                            android:layout_width="5dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/saved_connection_dep_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:singleLine="true"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/arrival_short_colon"
                            android:textStyle="bold" />

                        <Space
                            android:layout_width="5dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/saved_connection_arr_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </LinearLayout>
                </TableRow>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/date"
                            android:textStyle="bold" />

                        <Space
                            android:layout_width="5dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/saved_connection_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/duration"
                            android:textStyle="bold" />

                        <Space
                            android:layout_width="5dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/saved_connection_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </LinearLayout>
                </TableRow>

            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:id="@+id/saved_connection_transports"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>

